Added new entity similarity metric